[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/ItemList.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Inventaire_plantes.gd" type="Script" id=2]
[ext_resource path="res://Assets/Son/Preselection graine.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/UI/Font/Gravity-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/Inv/Button_theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/Inv/UI_theme.tres" type="Theme" id=6]
[ext_resource path="res://Assets/UI/Inv/boiteagraineV3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Son/OuvertureBoiteGraine.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/UI/icon.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/Inv/POSTIT.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/Carnet/Font/Font_Entete_Livre.tres" type="DynamicFont" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Apparition"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.517633, 0.34151 ),
"update": 0,
"values": [ Vector2( -883, 86 ), Vector2( 60, 86 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/OuvreBoite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fermeture"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 2.46228, 1.86607 ),
"update": 0,
"values": [ Vector2( 60, 86 ), Vector2( -883, 86 ) ]
}

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 4 )

[node name="Inventory" type="Control"]
visible = false
anchor_top = -0.007
anchor_bottom = -0.007
margin_left = -232.0
margin_top = -24.44
margin_right = -232.0
margin_bottom = -24.44
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Apparition = SubResource( 1 )
anims/Fermeture = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="AnimationPlayer"]
margin_left = -883.0
margin_top = 86.0
margin_right = 17.0
margin_bottom = 1070.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="AnimationPlayer/TextureRect"]
anchor_left = -2.0
anchor_top = -5.45
anchor_right = -2.0
anchor_bottom = -5.45
margin_left = 1835.0
margin_top = 5436.8
margin_right = 2355.0
margin_bottom = 6121.8
theme = ExtResource( 6 )
custom_styles/bg = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.137255, 0.164706, 0.121569, 1 )
max_columns = 5
same_column_width = true
fixed_column_width = 96
icon_mode = 0
fixed_icon_size = Vector2( 74, 74 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Valider" type="Button" parent="AnimationPlayer/TextureRect"]
margin_left = 99.0
margin_top = 658.0
margin_right = 299.0
margin_bottom = 732.0
theme = ExtResource( 5 )
text = "Valider"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Annuler" type="Button" parent="AnimationPlayer/TextureRect"]
margin_left = 307.0
margin_top = 658.0
margin_right = 507.0
margin_bottom = 732.0
theme = ExtResource( 5 )
text = "Annuler"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="POSTIT" type="Sprite" parent="AnimationPlayer/TextureRect"]
position = Vector2( 667, 122 )
rotation = -2.88328
texture = ExtResource( 10 )

[node name="Illustration" type="Sprite" parent="AnimationPlayer/TextureRect"]
visible = false
position = Vector2( 667, 122 )
scale = Vector2( 1.125, 1.05469 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="AnimationPlayer/TextureRect"]
visible = false
anchor_left = 0.617
anchor_top = 0.189
anchor_right = 0.617
anchor_bottom = 0.189
margin_left = -12.3
margin_top = 0.0239868
margin_right = 231.7
margin_bottom = 40.024
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0.129412, 0.145098, 0.129412, 1 )
text = "Nom_Plante_Defaut"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuvreBoite" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 8 )

[node name="ClicGraine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="item_selected" from="AnimationPlayer/TextureRect/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="AnimationPlayer/TextureRect/B_Valider" to="." method="_on_B_Valider_pressed"]
[connection signal="pressed" from="AnimationPlayer/TextureRect/B_Annuler" to="." method="_on_B_Annuler_pressed"]
